{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "8fe6aaba-9f79-4971-8646-dc94fc3b3e5a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bdcdb0f7-6217-49ea-ac81-6427067ea607",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "b0860555-c2c5-4a91-a028-f36b7c717718",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "7513bbc2-cd30-4309-a33a-48b00150d606",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "915b9c74-ba9e-4ea1-9288-21b697d8ace7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "a87d4f46-ac47-4e2e-94bd-70d992c276b1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "0fb88b48-ce28-4f9b-9c84-fa54e5999536",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "UseConsumable",
                    "type": "Button",
                    "id": "61a30f20-f0d1-4bb8-8bb6-c4704ffd46cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "963fe9be-44ec-4505-ad32-6bcb9888dbb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f1726b32-a5e0-43a7-9c81-968a3d301cc9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a934202a-429f-4beb-8df8-dec8fb07bb52",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d5e76e7-d3a7-4352-be66-9d4e04fdd0e9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1282a6b2-dc3d-495d-8885-2f6792b89190",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8200003b-2b5e-4e44-9a00-35f8dcd09a9a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76a02ea0-986d-4f60-99e3-c3f233d8d432",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d7b8c57-4c13-4802-9501-34931044e77c",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseConsumable",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ed1f880-adcd-4483-8d7c-d00013ed435f",
                    "path": "<Gamepad>/D-Pad Up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}